spacing fixes for about page and contact page on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -33,4 +33,18 @@ img.card-img:hover {
     cursor: pointer;
 }
 
+@media (max-width: 992px) {
+    h1 {
+        font-size: 40px;
+        text-align: center;
+    }
+
+    .nav-link, .form-label, p {
+        font-size: 15px;
+    }
+
+    .list-group-item {
+        size: 40px;
+    }
+   }
 
